force-app/main/default/objects/Contact/fields/Licence_Number__c.field-meta.xml
<CustomField>
    <fullName>Licence_Number__c</fullName>
    <label>Licence Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>