force-app/main/default/objects/Contact/fields/LivestocksRiskLoc__c.field-meta.xml
<CustomField>
    <fullName>LivestocksRiskLoc__c</fullName>
    <description>LivestocksRiskLoc.</description>
    <label>LivestocksRiskLoc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>