force-app/main/default/objects/Contact/fields/LNRIGINSRiskLoc__c.field-meta.xml
<CustomField>
    <fullName>LNRIGINSRiskLoc__c</fullName>
    <description>LNRIGINSURANCERiskLoc.</description>
    <label>LNRIGINSURANCERiskLoc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>