force-app/main/default/objects/Contact/fields/LNRIGINSSHARIARiskLoc__c.field-meta.xml
<CustomField>
    <fullName>LNRIGINSSHARIARiskLoc__c</fullName>
    <description>LNRIGINSURANCESHARIARiskLoc.</description>
    <label>LNRIGINSURANCESHARIARiskLoc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>