force-app/main/default/objects/Contact/fields/Machine_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Machine_Capacity__c</fullName>
    <label>Machine Capacity</label>
    <length>50</length>
    <type>Text</type>
</CustomField>