force-app/main/default/objects/Contact/fields/Machine_No__c.field-meta.xml
<CustomField>
    <fullName>Machine_No__c</fullName>
    <label>Machine No</label>
    <length>100</length>
    <type>Text</type>
</CustomField>