force-app/main/default/objects/Contact/fields/MAINTENANCEBONDBondNo__c.field-meta.xml
<CustomField>
    <fullName>MAINTENANCEBONDBondNo__c</fullName>
    <description>MAINTENANCEBONDBondNo.</description>
    <label>MAINTENANCEBONDBondNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>