force-app/main/default/objects/Contact/fields/MARINEBUILDERRISKRiskLoc__c.field-meta.xml
<CustomField>
    <fullName>MARINEBUILDERRISKRiskLoc__c</fullName>
    <description>MARINEBUILDERRISKRiskLoc.</description>
    <label>MARINEBUILDERRISKRiskLoc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>