force-app/main/default/objects/Contact/fields/MARINECARGOCOVERNOTEVesselReg__c.field-meta.xml
<CustomField>
    <fullName>MARINECARGOCOVERNOTEVesselReg__c</fullName>
    <description>MARINECARGOCOVERNOTEVesselReg.</description>
    <label>MARINECARGOCOVERNOTEVesselReg</label>
    <length>255</length>
    <type>Text</type>
</CustomField>