force-app/main/default/objects/Contact/fields/MARINECARGOEXPORTVesselReg__c.field-meta.xml
<CustomField>
    <fullName>MARINECARGOEXPORTVesselReg__c</fullName>
    <description>MARINECARGOEXPORTVesselReg.</description>
    <label>MARINECARGOEXPORTVesselReg</label>
    <length>255</length>
    <type>Text</type>
</CustomField>