force-app/main/default/objects/Contact/fields/MARINECARGOIMPORTVesselReg__c.field-meta.xml
<CustomField>
    <fullName>MARINECARGOIMPORTVesselReg__c</fullName>
    <description>MARINECARGOIMPORTVesselReg.</description>
    <label>MARINECARGOIMPORTVesselReg</label>
    <length>255</length>
    <type>Text</type>
</CustomField>