force-app/main/default/objects/Contact/fields/MARINECARGOINTERINSULAIRVesselReg__c.field-meta.xml
<CustomField>
    <fullName>MARINECARGOINTERINSULAIRVesselReg__c</fullName>
    <description>MARINECARGOINTERINSULAIRVesselReg.</description>
    <label>MARINECARGOINTERINSULAIRVesselReg</label>
    <length>255</length>
    <type>Text</type>
</CustomField>