force-app/main/default/objects/Contact/fields/MARINECARGOINTERISLNVesselReg__c.field-meta.xml
<CustomField>
    <fullName>MARINECARGOINTERISLNVesselReg__c</fullName>
    <description>MARINECARGOINTERISLNVesselReg.</description>
    <label>MARINECARGOINTERISLNVesselReg</label>
    <length>255</length>
    <type>Text</type>
</CustomField>