force-app/main/default/objects/Contact/fields/MARINECARGOOPENCOVERNONKAPALBLNo__c.field-meta.xml
<CustomField>
    <fullName>MARINECARGOOPENCOVERNONKAPALBLNo__c</fullName>
    <description>MARINECARGOOPENCOVERNONKAPALBLNo.</description>
    <label>MARINECARGOOPENCOVERNONKAPALBLNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>