force-app/main/default/objects/Contact/fields/MARINECARGOOPENCOVERNONKAPALLCNo__c.field-meta.xml
<CustomField>
    <fullName>MARINECARGOOPENCOVERNONKAPALLCNo__c</fullName>
    <description>MARINECARGOOPENCOVERNONKAPALLCNo.</description>
    <label>MARINECARGOOPENCOVERNONKAPALLCNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>