force-app/main/default/objects/Contact/fields/MARINECARGOOPENCOVERVesselReg__c.field-meta.xml
<CustomField>
    <fullName>MARINECARGOOPENCOVERVesselReg__c</fullName>
    <description>MARINECARGOOPENCOVERVesselReg.</description>
    <label>MARINECARGOOPENCOVERVesselReg</label>
    <length>255</length>
    <type>Text</type>
</CustomField>