force-app/main/default/objects/Contact/fields/MARINEHULLSHARIAVesselReg__c.field-meta.xml
<CustomField>
    <fullName>MARINEHULLSHARIAVesselReg__c</fullName>
    <description>MARINEHULLSHARIAVesselReg.</description>
    <label>MARINEHULLSHARIAVesselReg</label>
    <length>255</length>
    <type>Text</type>
</CustomField>