force-app/main/default/objects/Contact/fields/MARINEHULLVesselReg__c.field-meta.xml
<CustomField>
    <fullName>MARINEHULLVesselReg__c</fullName>
    <description>MARINEHULLVesselReg.</description>
    <label>MARINEHULLVesselReg</label>
    <length>255</length>
    <type>Text</type>
</CustomField>