force-app/main/default/objects/Contact/fields/McrSavingPersonAccidentNmTertanggung__c.field-meta.xml
<CustomField>
    <fullName>McrSavingPersonAccidentNmTertanggung__c</fullName>
    <description>MicroSavingPersonAccidentNamaTertanggung.</description>
    <label>MicroSavingPersonAccidentNamaTertanggung</label>
    <length>255</length>
    <type>Text</type>
</CustomField>