force-app/main/default/objects/Contact/fields/mdmid_owner__c.field-meta.xml
<CustomField>
    <fullName>mdmid_owner__c</fullName>
    <label>MDM ID Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>