force-app/main/default/objects/Contact/fields/Member_No__c.field-meta.xml
<CustomField>
    <fullName>Member_No__c</fullName>
    <label>Member No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>