force-app/main/default/objects/Contact/fields/MII_Check__c.field-meta.xml
<CustomField>
    <fullName>MII_Check__c</fullName>
    <label>MII Check</label>
    <length>255</length>
    <type>Text</type>
</CustomField>