force-app/main/default/objects/Contact/fields/MIKROFIRERiskLoc__c.field-meta.xml
<CustomField>
    <fullName>MIKROFIRERiskLoc__c</fullName>
    <description>MIKROFIRERiskLoc.</description>
    <label>MIKROFIRERiskLoc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>