force-app/main/default/objects/Contact/fields/MIKROFIRESHARIARiskLoc__c.field-meta.xml
<CustomField>
    <fullName>MIKROFIRESHARIARiskLoc__c</fullName>
    <description>MIKROFIRESHARIARiskLoc.</description>
    <label>MIKROFIRESHARIARiskLoc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>