force-app/main/default/objects/Contact/fields/MIKROKENDARAANMV2ChasisNo__c.field-meta.xml
<CustomField>
    <fullName>MIKROKENDARAANMV2ChasisNo__c</fullName>
    <description>MIKROKENDARAANMV2ChasisNo.</description>
    <label>MIKROKENDARAANMV2ChasisNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>