force-app/main/default/objects/Contact/fields/MIKROKENDARAANMV2MCHNENo__c.field-meta.xml
<CustomField>
    <fullName>MIKROKENDARAANMV2MCHNENo__c</fullName>
    <description>MIKROKENDARAANMV2MachineNo.</description>
    <label>MIKROKENDARAANMV2MachineNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>