force-app/main/default/objects/Contact/fields/MIKROKENDARAANMV2SHARIAChasisNo__c.field-meta.xml
<CustomField>
    <fullName>MIKROKENDARAANMV2SHARIAChasisNo__c</fullName>
    <description>MIKROKENDARAANMV2SHARIAChasisNo.</description>
    <label>MIKROKENDARAANMV2SHARIAChasisNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>