force-app/main/default/objects/Contact/fields/MIKROKENDARAANMV2SHARIAMCHNENo__c.field-meta.xml
<CustomField>
    <fullName>MIKROKENDARAANMV2SHARIAMCHNENo__c</fullName>
    <description>MIKROKENDARAANMV2SHARIAMachineNo.</description>
    <label>MIKROKENDARAANMV2SHARIAMachineNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>