force-app/main/default/objects/Contact/fields/MIKROKENDARAANMV4ChasisNo__c.field-meta.xml
<CustomField>
    <fullName>MIKROKENDARAANMV4ChasisNo__c</fullName>
    <description>MIKROKENDARAANMV4ChasisNo.</description>
    <label>MIKROKENDARAANMV4ChasisNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>