force-app/main/default/objects/Contact/fields/MIKROKENDARAANMV4MCHNENo__c.field-meta.xml
<CustomField>
    <fullName>MIKROKENDARAANMV4MCHNENo__c</fullName>
    <description>MIKROKENDARAANMV4MachineNo.</description>
    <label>MIKROKENDARAANMV4MachineNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>