force-app/main/default/objects/Contact/fields/MIKROKENDARAANMV4SHARIAChasisNo__c.field-meta.xml
<CustomField>
    <fullName>MIKROKENDARAANMV4SHARIAChasisNo__c</fullName>
    <description>MIKROKENDARAANMV4SHARIAChasisNo.</description>
    <label>MIKROKENDARAANMV4SHARIAChasisNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>