force-app/main/default/objects/Contact/fields/MIKROKENDARAANMV4SHARIAMCHNENo__c.field-meta.xml
<CustomField>
    <fullName>MIKROKENDARAANMV4SHARIAMCHNENo__c</fullName>
    <description>MIKROKENDARAANMV4SHARIAMachineNo.</description>
    <label>MIKROKENDARAANMV4SHARIAMachineNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>