force-app/main/default/objects/Contact/fields/Mobile_F__c.field-meta.xml
<CustomField>
    <fullName>Mobile_F__c</fullName>
    <formula>SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
IF (LEFT(MobilePhone,2)== &quot;62&quot;,&quot;0&quot;&amp;RIGHT(MobilePhone,LEN(MobilePhone)-2),MobilePhone)
, &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;)
, &quot;/&quot;, &quot;&quot;)
, &quot;;&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobile_F</label>
    <type>Text</type>
</CustomField>