force-app/main/default/objects/Contact/fields/Mobile_is_Number__c.field-meta.xml
<CustomField>
    <fullName>Mobile_is_Number__c</fullName>
    <formula>ISNUMBER( Mobile_F__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobile is Number ?</label>
    <type>Checkbox</type>
</CustomField>