force-app/main/default/objects/Contact/fields/MOVABLEPROPERTYALLRISKTheBusiness__c.field-meta.xml
<CustomField>
    <fullName>MOVABLEPROPERTYALLRISKTheBusiness__c</fullName>
    <description>MOVABLEPROPERTYALLRISKTheBusiness.</description>
    <label>MOVABLEPROPERTYALLRISKTheBusiness</label>
    <length>255</length>
    <type>Text</type>
</CustomField>