force-app/main/default/objects/Contact/fields/MTRVEHICLEWITHEXTCOVERChasisNo__c.field-meta.xml
<CustomField>
    <fullName>MTRVEHICLEWITHEXTCOVERChasisNo__c</fullName>
    <description>MTRVEHICLEWITHEXTCOVERChasisNo.</description>
    <label>MTRVEHICLEWITHEXTCOVERChasisNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>