force-app/main/default/objects/Contact/fields/MTRVEHICLEWITHEXTCOVERMCHNENo__c.field-meta.xml
<CustomField>
    <fullName>MTRVEHICLEWITHEXTCOVERMCHNENo__c</fullName>
    <description>MTRVEHICLEWITHEXTCOVERMachineNo.</description>
    <label>MTRVEHICLEWITHEXTCOVERMachineNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>