force-app/main/default/objects/Contact/fields/MTRVEHICLEWITHEXTCOVERSHARIAChasisNo__c.field-meta.xml
<CustomField>
    <fullName>MTRVEHICLEWITHEXTCOVERSHARIAChasisNo__c</fullName>
    <description>MTRVEHICLEWITHEXTCOVERSHARIAChasisNo.</description>
    <label>MTRVEHICLEWITHEXTCOVERSHARIAChasisNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>