force-app/main/default/objects/Contact/fields/MTRVEHICLEWITHEXTCOVERSHARIAMCHNENo__c.field-meta.xml
<CustomField>
    <fullName>MTRVEHICLEWITHEXTCOVERSHARIAMCHNENo__c</fullName>
    <description>MTRVEHICLEWITHEXTCOVERSHARIAMCHNENo.</description>
    <label>MTRVEHICLEWITHEXTCOVERSHARIAMCHNENo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>