force-app/main/default/objects/Contact/fields/NEONSIGNINSRiskLoc__c.field-meta.xml
<CustomField>
    <fullName>NEONSIGNINSRiskLoc__c</fullName>
    <description>NEONSIGNINSURANCERiskLoc.</description>
    <label>NEONSIGNINSURANCERiskLoc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>