force-app/main/default/objects/Contact/fields/New_Customer_Onboarding__c.field-meta.xml
<CustomField>
    <fullName>New_Customer_Onboarding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Customer Onboarding</label>
    <type>Checkbox</type>
</CustomField>