force-app/main/default/objects/Contact/fields/No_Interaction_ICF__c.field-meta.xml
<CustomField>
    <fullName>No_Interaction_ICF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Interaction ICF</label>
    <type>Checkbox</type>
</CustomField>