force-app/main/default/objects/Contact/fields/OfficeSafeRiskLoc__c.field-meta.xml
<CustomField>
    <fullName>OfficeSafeRiskLoc__c</fullName>
    <description>OfficeSafeRiskLoc.</description>
    <label>OfficeSafeRiskLoc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>