force-app/main/default/objects/Contact/fields/PAKRMikroBirthDate__c.field-meta.xml
<CustomField>
    <fullName>PAKRMikroBirthDate__c</fullName>
    <description>PAKreditMikroBirthDate.</description>
    <label>PAKreditMikroBirthDate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>