force-app/main/default/objects/Contact/fields/PAKRMikroName__c.field-meta.xml
<CustomField>
    <fullName>PAKRMikroName__c</fullName>
    <description>PAKreditMikroName.</description>
    <label>PAKreditMikroName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>