force-app/main/default/objects/Contact/fields/PAMoneyChangerIDNo__c.field-meta.xml
<CustomField>
    <fullName>PAMoneyChangerIDNo__c</fullName>
    <description>PAMoneyChangerIDNo.</description>
    <label>PAMoneyChangerIDNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>