force-app/main/default/objects/Contact/fields/PAPLUSMAANamaPeserta__c.field-meta.xml
<CustomField>
    <fullName>PAPLUSMAANamaPeserta__c</fullName>
    <description>PAPLUSMAANamaPeserta.</description>
    <label>PAPLUSMAANamaPeserta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>