force-app/main/default/objects/Contact/fields/PAPLUSMAANoIdentitas__c.field-meta.xml
<CustomField>
    <fullName>PAPLUSMAANoIdentitas__c</fullName>
    <description>PAPLUSMAANoIdentitas.</description>
    <label>PAPLUSMAANoIdentitas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>