force-app/main/default/objects/Contact/fields/PAPLUSMAREINNamaPeserta__c.field-meta.xml
<CustomField>
    <fullName>PAPLUSMAREINNamaPeserta__c</fullName>
    <description>PAPLUSMAREINNamaPeserta.</description>
    <label>PAPLUSMAREINNamaPeserta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>