force-app/main/default/objects/Contact/fields/PAPLUSMAREINNoIdentitas__c.field-meta.xml
<CustomField>
    <fullName>PAPLUSMAREINNoIdentitas__c</fullName>
    <description>PAPLUSMAREINNoIdentitas.</description>
    <label>PAPLUSMAREINNoIdentitas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>