force-app/main/default/objects/Contact/fields/PAPLUSNamaPeserta__c.field-meta.xml
<CustomField>
    <fullName>PAPLUSNamaPeserta__c</fullName>
    <description>PAPLUSNamaPeserta.</description>
    <label>PAPLUSNamaPeserta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>