force-app/main/default/objects/Contact/fields/PAPLUSNoIdentitas__c.field-meta.xml
<CustomField>
    <fullName>PAPLUSNoIdentitas__c</fullName>
    <description>PAPLUSNoIdentitas.</description>
    <label>PAPLUSNoIdentitas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>