force-app/main/default/objects/Contact/fields/PAPLUSPHKNamaDebitur__c.field-meta.xml
<CustomField>
    <fullName>PAPLUSPHKNamaDebitur__c</fullName>
    <description>PAPLUSPHKNamaDebitur.</description>
    <label>PAPLUSPHKNamaDebitur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>