force-app/main/default/objects/Contact/fields/PAPLUSPHKTglLahir__c.field-meta.xml
<CustomField>
    <fullName>PAPLUSPHKTglLahir__c</fullName>
    <description>PAPLUSPHKTglLahir.</description>
    <label>PAPLUSPHKTglLahir</label>
    <length>255</length>
    <type>Text</type>
</CustomField>