force-app/main/default/objects/Contact/fields/PAPLUSPHKTmpLahirDebitur__c.field-meta.xml
<CustomField>
    <fullName>PAPLUSPHKTmpLahirDebitur__c</fullName>
    <description>PAPLUSPHKTmpLahirDebitur.</description>
    <label>PAPLUSPHKTmpLahirDebitur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>