force-app/main/default/objects/Contact/fields/PAPLUSSHARIANamaPeserta__c.field-meta.xml
<CustomField>
    <fullName>PAPLUSSHARIANamaPeserta__c</fullName>
    <description>PAPLUSSHARIANamaPeserta.</description>
    <label>PAPLUSSHARIANamaPeserta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>