force-app/main/default/objects/Contact/fields/PAPLUSSHARIANoIdentitas__c.field-meta.xml
<CustomField>
    <fullName>PAPLUSSHARIANoIdentitas__c</fullName>
    <description>PAPLUSSHARIANoIdentitas.</description>
    <label>PAPLUSSHARIANoIdentitas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>