force-app/main/default/objects/Contact/fields/PASARCONSORTIUMKARKRiskLoc__c.field-meta.xml
<CustomField>
    <fullName>PASARCONSORTIUMKARKRiskLoc__c</fullName>
    <description>PASARCONSORTIUMKARKRiskLoc.</description>
    <label>PASARCONSORTIUMKARKRiskLoc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>