force-app/main/default/objects/Contact/fields/PASARCONSORTIUMKARKSHARIARiskLoc__c.field-meta.xml
<CustomField>
    <fullName>PASARCONSORTIUMKARKSHARIARiskLoc__c</fullName>
    <description>PASARCONSORTIUMKARKSHARIARiskLoc.</description>
    <label>PASARCONSORTIUMKARKSHARIARiskLoc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>