force-app/main/default/objects/Contact/fields/PATENAGAKERJAINDONamaTKI__c.field-meta.xml
<CustomField>
    <fullName>PATENAGAKERJAINDONamaTKI__c</fullName>
    <description>PATENAGAKERJAINDONamaTKI.</description>
    <label>PATENAGAKERJAINDONamaTKI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>