force-app/main/default/objects/Contact/fields/PATENAGAKERJAINDOTmpLahir__c.field-meta.xml
<CustomField>
    <fullName>PATENAGAKERJAINDOTmpLahir__c</fullName>
    <description>PATENAGAKERJAINDOTmpLahir.</description>
    <label>PATENAGAKERJAINDOTmpLahir</label>
    <length>255</length>
    <type>Text</type>
</CustomField>