force-app/main/default/objects/Contact/fields/PAYMENTBONDPrincipalCode__c.field-meta.xml
<CustomField>
    <fullName>PAYMENTBONDPrincipalCode__c</fullName>
    <description>PAYMENTBONDPrincipalCode.</description>
    <label>PAYMENTBONDPrincipalCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>