force-app/main/default/objects/Contact/fields/PERFORMANCEBONDBondNo__c.field-meta.xml
<CustomField>
    <fullName>PERFORMANCEBONDBondNo__c</fullName>
    <description>PERFORMANCEBONDBondNo.</description>
    <label>PERFORMANCEBONDBondNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>