force-app/main/default/objects/Contact/fields/PersonACCIDENTBirthDate__c.field-meta.xml
<CustomField>
    <fullName>PersonACCIDENTBirthDate__c</fullName>
    <description>PersonACCIDENTBirthDate.</description>
    <label>PersonACCIDENTBirthDate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>