force-app/main/default/objects/Contact/fields/Pic_Name__c.field-meta.xml
<CustomField>
    <fullName>Pic_Name__c</fullName>
    <label>Pic Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>