force-app/main/default/objects/Contact/fields/PipelineINSRiskLoc__c.field-meta.xml
<CustomField>
    <fullName>PipelineINSRiskLoc__c</fullName>
    <description>PipelineInsuranceRiskLoc.</description>
    <label>PipelineInsuranceRiskLoc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>