force-app/main/default/objects/Contact/fields/PLEASURECRAFTVesselReg__c.field-meta.xml
<CustomField>
    <fullName>PLEASURECRAFTVesselReg__c</fullName>
    <description>PLEASURECRAFTVesselReg.</description>
    <label>PLEASURECRAFTVesselReg</label>
    <length>255</length>
    <type>Text</type>
</CustomField>