force-app/main/default/objects/Contact/fields/Policy_No__c.field-meta.xml
<CustomField>
    <fullName>Policy_No__c</fullName>
    <label>Policy No</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>