force-app/main/default/objects/Contact/fields/Policy_No_AGI__c.field-meta.xml
<CustomField>
    <fullName>Policy_No_AGI__c</fullName>
    <description>SUBSTITUTE(Policy_No__c, &quot;_&quot;, &quot;&quot;)</description>
    <formula>IF (LEFT(RIGHT(Policy_No__c,9),1) == &apos;-&apos;, LEFT(Policy_No__c,LEN(Policy_No__c)-9),
IF (LEFT(RIGHT(Policy_No__c,8),1) == &apos;-&apos;, LEFT(Policy_No__c,LEN(Policy_No__c)-8),
IF (LEFT(RIGHT(Policy_No__c,7),1) == &apos;-&apos;, LEFT(Policy_No__c,LEN(Policy_No__c)-7),
IF (LEFT(RIGHT(Policy_No__c,3),1) == &apos;-&apos;, LEFT(Policy_No__c,LEN(Policy_No__c)-3),
IF (LEFT(RIGHT(Policy_No__c,2),1) == &apos;-&apos;, LEFT(Policy_No__c,LEN(Policy_No__c)-2),
Policy_No__c)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy No AGI</label>
    <type>Text</type>
</CustomField>