force-app/main/default/objects/Contact/fields/Policy_No_ALI2__c.field-meta.xml
<CustomField>
    <fullName>Policy_No_ALI2__c</fullName>
    <label>Policy No ALI2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>