force-app/main/default/objects/Contact/fields/Policy_No_ALI__c.field-meta.xml
<CustomField>
    <fullName>Policy_No_ALI__c</fullName>
    <formula>SUBSTITUTE(Policy_No__c, &quot;_&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy No ALI</label>
    <type>Text</type>
</CustomField>