force-app/main/default/objects/Contact/fields/Policy_No_BackEnd__c.field-meta.xml
<CustomField>
    <fullName>Policy_No_BackEnd__c</fullName>
    <label>Policy No BackEnd</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>