force-app/main/default/objects/Contact/fields/Policy_No_PCIDSS__c.field-meta.xml
<CustomField>
    <fullName>Policy_No_PCIDSS__c</fullName>
    <formula>SUBSTITUTE(Policy_No__c ,&apos;_&apos;, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy No PCIDSS</label>
    <type>Text</type>
</CustomField>