force-app/main/default/objects/Contact/fields/Policy_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Policy_Owner_Email__c</fullName>
    <label>Policy Owner Email</label>
    <length>125</length>
    <type>Text</type>
</CustomField>