force-app/main/default/objects/Contact/fields/PolicyApp__c.field-meta.xml
<CustomField>
    <fullName>PolicyApp__c</fullName>
    <label>PolicyApp</label>
    <length>15</length>
    <type>Text</type>
</CustomField>