force-app/main/default/objects/Contact/fields/POLISSTNDRASURKCLKANIRIINDONama__c.field-meta.xml
<CustomField>
    <fullName>POLISSTNDRASURKCLKANIRIINDONama__c</fullName>
    <description>POLISSTNDRASURKECELAKAANDIRIINDONama.</description>
    <label>POLISSTNDRASURKECELAKAANDIRIINDONama</label>
    <length>255</length>
    <type>Text</type>
</CustomField>