force-app/main/default/objects/Contact/fields/POLISSTNDRASURKCLKANIRIINDOTglLahir__c.field-meta.xml
<CustomField>
    <fullName>POLISSTNDRASURKCLKANIRIINDOTglLahir__c</fullName>
    <description>POLISSTNDRASURKECELAKAANDIRIINDOTglLahir.</description>
    <label>POLISSTNDRASURKECELAKAANDIRIINDOTglLahir</label>
    <length>255</length>
    <type>Text</type>
</CustomField>