force-app/main/default/objects/Contact/fields/POLISSTNDRASURKCLKANIRIINDOTmpLahir__c.field-meta.xml
<CustomField>
    <fullName>POLISSTNDRASURKCLKANIRIINDOTmpLahir__c</fullName>
    <description>POLISSTNDRASURKECELAKAANDIRIINDOTmpLahir.</description>
    <label>POLISSTNDRASURKECELAKAANDIRIINDOTmpLahir</label>
    <length>255</length>
    <type>Text</type>
</CustomField>