force-app/main/default/objects/Contact/fields/POOLMIGASCONSORTIUMRiskLoc__c.field-meta.xml
<CustomField>
    <fullName>POOLMIGASCONSORTIUMRiskLoc__c</fullName>
    <description>POOLMIGASCONSORTIUMRiskLoc.</description>
    <label>POOLMIGASCONSORTIUMRiskLoc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>