force-app/main/default/objects/Contact/fields/Priority_Customer__c.field-meta.xml
<CustomField>
    <fullName>Priority_Customer__c</fullName>
    <label>Priority Customer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>