force-app/main/default/objects/Contact/fields/Priority_Customer_Flag__c.field-meta.xml
<CustomField>
    <fullName>Priority_Customer_Flag__c</fullName>
    <formula>IF( text(Priority_Customer__c) = &apos;Yes&apos;, IMAGE(&quot;/servlet/servlet.FileDownload?file=015p00000006Z2n&quot;,&quot;&quot;,20,20), &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priority Customer Flag</label>
    <type>Text</type>
</CustomField>