force-app/main/default/objects/Contact/fields/Probable_Causes__c.field-meta.xml
<CustomField>
    <fullName>Probable_Causes__c</fullName>
    <label>Probable Causes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>