force-app/main/default/objects/Contact/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Health Individu - Local (ESC)</fullName>
            </value>
            <value>
                <fullName>Health Individu - International (IE - Promedicare AB- Promedicare CDE)</fullName>
            </value>
            <value>
                <fullName>Health Group - Local (GSC)</fullName>
            </value>
            <value>
                <fullName>Health Group - International (IE)</fullName>
            </value>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Lifestyle</fullName>
            </value>
            <value>
                <fullName>Liability - Commercial</fullName>
            </value>
            <value>
                <fullName>Marine</fullName>
            </value>
            <value>
                <fullName>MV - Commercial</fullName>
            </value>
            <value>
                <fullName>MV - Retail</fullName>
            </value>
            <value>
                <fullName>PA</fullName>
            </value>
            <value>
                <fullName>Property - Commercial</fullName>
            </value>
            <value>
                <fullName>Domestic Travel</fullName>
            </value>
            <value>
                <fullName>International Travel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>