force-app/main/default/objects/Contact/fields/Product_Code_Plant_TelUW__c.field-meta.xml
<CustomField>
    <fullName>Product_Code_Plant_TelUW__c</fullName>
    <label>Product Code Plant TelUW</label>
    <length>255</length>
    <type>Text</type>
</CustomField>