force-app/main/default/objects/Contact/fields/Production_Year__c.field-meta.xml
<CustomField>
    <fullName>Production_Year__c</fullName>
    <label>Production Year</label>
    <length>20</length>
    <type>Text</type>
</CustomField>