force-app/main/default/objects/Contact/fields/PRODUCTLIABILITYInsuredPremises__c.field-meta.xml
<CustomField>
    <fullName>PRODUCTLIABILITYInsuredPremises__c</fullName>
    <description>PRODUCTLIABILITYInsuredPremises.</description>
    <label>PRODUCTLIABILITYInsuredPremises</label>
    <length>255</length>
    <type>Text</type>
</CustomField>