force-app/main/default/objects/Contact/fields/PROPERTYALLRISKRiskLoc__c.field-meta.xml
<CustomField>
    <fullName>PROPERTYALLRISKRiskLoc__c</fullName>
    <description>PROPERTYALLRISKRiskLoc.</description>
    <label>PROPERTYALLRISKRiskLoc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>