force-app/main/default/objects/Contact/fields/PROPERTYALLRISKSHARIARiskLoc__c.field-meta.xml
<CustomField>
    <fullName>PROPERTYALLRISKSHARIARiskLoc__c</fullName>
    <description>PROPERTYALLRISKSHARIARiskLoc.</description>
    <label>PROPERTYALLRISKSHARIARiskLoc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>