force-app/main/default/objects/Contact/fields/PSAGBIRiskLoc__c.field-meta.xml
<CustomField>
    <fullName>PSAGBIRiskLoc__c</fullName>
    <description>PSAGBIRiskLoc.</description>
    <label>PSAGBIRiskLoc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>