force-app/main/default/objects/Contact/fields/PSAGBISHARIARiskLoc__c.field-meta.xml
<CustomField>
    <fullName>PSAGBISHARIARiskLoc__c</fullName>
    <description>PSAGBISHARIARiskLoc.</description>
    <label>PSAGBISHARIARiskLoc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>