force-app/main/default/objects/Contact/fields/PSAKBIChasisNo__c.field-meta.xml
<CustomField>
    <fullName>PSAKBIChasisNo__c</fullName>
    <description>PSAKBIChasisNo.</description>
    <label>PSAKBIChasisNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>