force-app/main/default/objects/Contact/fields/PSAKBIMCHNENo__c.field-meta.xml
<CustomField>
    <fullName>PSAKBIMCHNENo__c</fullName>
    <description>PSAKBIMachineNo.</description>
    <label>PSAKBIMachineNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>