force-app/main/default/objects/Contact/fields/PSAKBIMTRCYCLEChasisNo__c.field-meta.xml
<CustomField>
    <fullName>PSAKBIMTRCYCLEChasisNo__c</fullName>
    <description>PSAKBIMOTORCYCLEChasisNo.</description>
    <label>PSAKBIMOTORCYCLEChasisNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>