force-app/main/default/objects/Contact/fields/PSAKBIMTRCYCLEMCHNENo__c.field-meta.xml
<CustomField>
    <fullName>PSAKBIMTRCYCLEMCHNENo__c</fullName>
    <description>PSAKBIMOTORCYCLEMachineNo.</description>
    <label>PSAKBIMOTORCYCLEMachineNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>