force-app/main/default/objects/Contact/fields/PSAKBIMTRCYCLESHARIAChasisNo__c.field-meta.xml
<CustomField>
    <fullName>PSAKBIMTRCYCLESHARIAChasisNo__c</fullName>
    <description>PSAKBIMOTORCYCLESHARIAChasisNo.</description>
    <label>PSAKBIMOTORCYCLESHARIAChasisNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>