force-app/main/default/objects/Contact/fields/PSAKBIMTRCYCLESHARIAMCHNENo__c.field-meta.xml
<CustomField>
    <fullName>PSAKBIMTRCYCLESHARIAMCHNENo__c</fullName>
    <description>PSAKBIMOTORCYCLESHARIAMachineNo.</description>
    <label>PSAKBIMOTORCYCLESHARIAMachineNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>