force-app/main/default/objects/Contact/fields/PSAKBISHARIAChasisNo__c.field-meta.xml
<CustomField>
    <fullName>PSAKBISHARIAChasisNo__c</fullName>
    <description>PSAKBISHARIAChasisNo.</description>
    <label>PSAKBISHARIAChasisNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>