force-app/main/default/objects/Contact/fields/PSAKBISHARIAMCHNENo__c.field-meta.xml
<CustomField>
    <fullName>PSAKBISHARIAMCHNENo__c</fullName>
    <description>PSAKBISHARIAMachineNo.</description>
    <label>PSAKBISHARIAMachineNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>