force-app/main/default/objects/Contact/fields/PSAKIBBCRiskLoc__c.field-meta.xml
<CustomField>
    <fullName>PSAKIBBCRiskLoc__c</fullName>
    <description>PSAKI BBC RiskLocation.</description>
    <label>PSAKI BBC RiskLocation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>