force-app/main/default/objects/Contact/fields/PSAKIBBCSHARIARiskLoc__c.field-meta.xml
<CustomField>
    <fullName>PSAKIBBCSHARIARiskLoc__c</fullName>
    <description>PSAKIBBCSHARIARiskLoc.</description>
    <label>PSAKIBBCSHARIARiskLoc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>