force-app/main/default/objects/Contact/fields/PSAKIRiskLoc__c.field-meta.xml
<CustomField>
    <fullName>PSAKIRiskLoc__c</fullName>
    <description>PSAKIRiskLoc.</description>
    <label>PSAKIRiskLoc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>